# gencedula

./: README.md  pyproject.toml  setup.py
gencedula/: gencedula.py
