[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gencedula"
version = "0.7"
description = "Python module to generate random and verify uruguay identification document."
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
keywords = [
    "generate",
    "uruguay",
    "identification",
    "document",
    "verify",
    "number",
    "cedula"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/carlosplanchon/gencedula"

[tool.setuptools]
packages = ["gencedula"]
